Add copyright warning to Ask Help panel
* Change the CTA for submitting question from "Post" to "Publish"

Bug: T297719
Change-Id: Ie001345a8a831bb47dde0afcbb85e9883695ae93

--- a/i18n/help/en.json
+++ b/i18n/help/en.json
@@ -5,7 +5,7 @@
 	"growthexperiments-help-panel-tog-help-panel": "Enable the editor help panel",
 	"growthexperiments-help-panel-cta-button-text": "Get help with editing",
 	"growthexperiments-help-panel-question-button-text": "Continue",
-	"growthexperiments-help-panel-submit-question-button-text": "Post",
+	"growthexperiments-help-panel-submit-question-button-text": "Publish",
 	"growthexperiments-help-panel-return-home-button-text": "Done",
 	"growthexperiments-help-panel-editing-help-links-widget-header": "Top help pages about editing",
 	"growthexperiments-help-panel-editing-help-links-widget-view-more-link": "View more help articles",
@@ -32,7 +32,7 @@
 	"growthexperiments-help-panel-postedit-footer2-notsaved": "Close",
 	"growthexperiments-help-panel-questionreview-title": "Ask the help desk",
 	"growthexperiments-help-panel-questionreview-title-mentor": "Ask your mentor",
-	"growthexperiments-help-panel-questionreview-header": "When you submit a question, it gets <strong>posted publicly</strong> under your username, \"$2\", to the $1, where another volunteer editor will try to provide an answer within the next day or so.",
+	"growthexperiments-help-panel-questionreview-header": "When you submit a question, it gets <strong>published publicly</strong> under your username, \"$2\", to the $1, where another volunteer editor will try to provide an answer within the next day or so.",
 	"growthexperiments-help-panel-questionreview-label": "Your question",
 	"growthexperiments-help-panel-questionreview-include-article-title": "Include page title with my question",
 	"growthexperiments-help-panel-question-subject-template": "Help panel question",
@@ -129,7 +129,7 @@
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-image-recommendation-main-multiple-1-step3": "The suggestion may be unrelated to the article, low quality, or may not belong for other reasons. Use {{GENDER:|your}} judgment to decide whether the suggestion is right or wrong.",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-image-recommendation-main-multiple-2-step3": "For images that {{GENDER:|you}} accept, {{GENDER:|you'll}} write a short caption, and then {{GENDER:|your}} edit will be published.",
 	"growthexperiments-help-panel-questioncomplete-title": "Ask a question",
-	"growthexperiments-help-panel-questioncomplete-header": "Your question has been posted!",
+	"growthexperiments-help-panel-questioncomplete-header": "Your question has been published!",
 	"growthexperiments-help-panel-questioncomplete-confirmation-text": "Your question is now on the Community Help Desk for it to be answered by another volunteer editor.",
 	"growthexperiments-help-panel-questioncomplete-view-link-text": "View your question on the Help Desk",
 	"growthexperiments-help-panel-questioncomplete-notifications-section-header": "Notifications for your question:",
