--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -91,5 +91,7 @@
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-info-text-line2": "It’s recommended to start on the “Average” setting to gauge your support capacity before increasing or decreasing.",
 	"growthexperiments-mentor-list-missing-key": "Key <code>$1</code> is missing",
 	"growthexperiments-mentor-list-datatype-mismatch": "<code>$1</code> is expected to be <code>$2</code>, but is <code>$3</code>",
-	"growthexperiments-mentor-list-unexpected-key-mentor": "Mentor definition contains an unexpected key <code>$1</code>"
+	"growthexperiments-mentor-list-unexpected-key-mentor": "Mentor definition contains an unexpected key <code>$1</code>",
+	"growthexperiments-mentor-writer-error-already-added": "Mentor $1 was already added to the mentor list",
+	"growthexperiments-mentor-writer-error-not-in-the-list": "Mentor $1 is not in the mentor list"
 }
