GLAM event: landing page
* Pass CampaignConfig to VariantHooks and WelcomeSurveyHooks
* Determine the user's campaign from both GECampaignPattern and GECampaigns
* Add glamcampaign message keys

Bug: T301097
Change-Id: Ifdf70cc41e0d606a8674b78e4ae217563abba596

--- a/i18n/confirmemail/es.json
+++ b/i18n/confirmemail/es.json
@@ -22,5 +22,7 @@
 	"growthexperiments-signupcampaign-body": "Wikipedia está construida por personas como tú que trabajan juntas. Editar un artículo puede ser tan simple como agregar un enlace o cambiar una palabra.",
 	"growthexperiments-signupcampaign-bullet1": "Artículos sugeridos según {{GENDER:|tus}} intereses",
 	"growthexperiments-signupcampaign-bullet2": "Obtén ayuda y orientación mientras editas",
-	"growthexperiments-signupcampaign-bullet3": "Empieza con ediciones pequeñas y sencillas"
+	"growthexperiments-signupcampaign-bullet3": "Empieza con ediciones pequeñas y sencillas",
+	"growthexperiments-glamcampaign-title": "¡Te damos la bienvenida al evento #1pic1article!\n\nPodrás comenzar a sumar conocimientos en la enciclopedia una vez que hayas creado tu cuenta de usuario.",
+	"growthexperiments-glamcampaign-body": "Este es un evento organizado por Wikimedia Argentina, Wikimedia Chile, Wikimedia México y la Fundación Wikimedia para ayudarte a aprender sobre Wikipedia y cómo colocar imágenes en diferentes artículos empleando la función \"Agregar una imagen\" (Add an image, en inglés)\n\nPara comenzar a utilizar esta herramienta, todo lo que debes hacer es completar este formulario y luego elegir un tema de interés.\n\nSi necesitas ayuda, consulta a los organizadores y organizadoras del evento."
 }
