Suggested edits: use plural for number of edits text
Bug: T302546
Change-Id: I78eaa51b74526eef62430717d06e96016b9795eb
Depends-On: Idddb6ded1c91d9c1b0ca3c73a26b463a98f832c2

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -165,7 +165,7 @@
 	"growthexperiments-homepage-suggestededits-footer-megasuffix": "$1M",
 	"growthexperiments-homepage-suggestededits-footer-gigasuffix": "$1B",
 	"growthexperiments-homepage-suggestededits-footer-terasuffix": "$1T",
-	"growthexperiments-homepage-suggestededits-mobilesummary-metricssubtitle": "edits in the last day",
+	"growthexperiments-homepage-suggestededits-mobilesummary-metricssubtitle": "{{PLURAL:$1|edit|edits}} in the last day",
 	"growthexperiments-homepage-suggestededits-mobilesummary-footer": "Volunteers like you have contributed to improving {{SITENAME}} today. Join in!",
 	"growthexperiments-homepage-suggestededits-mobilesummary-footer-button": "See all suggestions",
 	"growthexperiments-homepage-suggestededits-tasktype-shortdescription-copyedit": "Fix spelling, grammar, and tone",
