Post-edit: show PostEditPanel inside a collapsible drawer for both desktop and mobile
* Show the post-edit toast message separately from the post-edit panel
* Remove "Close and edit again" button from the post-edit panel
* Show navigation arrows instead of a refresh button in the post-edit panel
* Close the post-edit drawer when the editor is re-activated after saving unstructured task edits
* Show a generic suggested edits card when there are no tasks to show in the post-edit panel
* Reload the page after saving structured task edits on desktop to use VE's default ArticleTarget instead of StructuredTaskArticleTarget
* Update instrumentation

Bug: T301603
Depends-On: I57122b99ca466c37d1d4339d9c265ffe031d252c
Change-Id: Ie3cbfaf55ad4471f110c7d3dfc529c5c3ac02c61

--- a/i18n/help/en.json
+++ b/i18n/help/en.json
@@ -26,10 +26,8 @@
 	"growthexperiments-help-panel-postedit-subheader2-link-recommendation": "Try another type of edit or come back tomorrow for more link suggestions.",
 	"growthexperiments-help-panel-postedit-subheader": "Edit another suggestion:",
 	"growthexperiments-help-panel-postedit-subheader-notsaved": "Next suggestion:",
-	"growthexperiments-help-panel-postedit-subheader-refresh-label": "Refresh suggestion",
 	"growthexperiments-help-panel-postedit-footer": "View more suggested edits",
-	"growthexperiments-help-panel-postedit-footer2": "Close and edit this article again",
-	"growthexperiments-help-panel-postedit-footer2-notsaved": "Close",
+	"growthexperiments-help-panel-postedit-suggestededits-info": "Other users of {{SITENAME}} have found articles that need work. Continue {{GENDER:|your}} editing by browsing these suggested edits.",
 	"growthexperiments-help-panel-questionreview-title": "Ask the help desk",
 	"growthexperiments-help-panel-questionreview-title-mentor": "Ask your mentor",
 	"growthexperiments-help-panel-questionreview-header": "When you submit a question, it gets <strong>published publicly</strong> under your username, \"$2\", to the $1, where another volunteer editor will try to provide an answer within the next day or so.",
