--- a/i18n/confirmemail/en.json
+++ b/i18n/confirmemail/en.json
@@ -14,6 +14,8 @@
 	"growthexperiments-confirmemail-confirm-body-plaintext": "{{GENDER:$2|Hi}} $2,\n\nThanks for adding an email to your {{SITENAME}} account, registered from IP address $1.\n\nPlease click on the link below to confirm this as the email address you'd like to link to your account \"$2\":\n\n$3\n\nNote: this confirmation code expires at $4.\n\nThanks,\n\n{{SITENAME}}\n\n----\n\nTo cancel the email address confirmation (because you did not register the account or for any other reason), click on this cancellation link:\n\n$5",
 	"growthexperiments-signupcampaign-title": "Thanks for donating! Now join the community of editors making Wikipedia better today",
 	"growthexperiments-signupcampaign-body": "Editing Wikipedia can be as simple as adding a link or changing a word. Get suggestions for articles in {{GENDER:|your}} topics of interest after you create your account!",
+	"growthexperiments-marketingvideocampaign-title": "Thanks for donating! Now join the community of editors making Wikipedia better today",
+	"growthexperiments-marketingvideocampaign-body": "Editing Wikipedia can be as simple as adding a link or changing a word. Get suggestions for articles in {{GENDER:|your}} topics of interest after you create your account!",
 	"growthexperiments-signupcampaign-bullet1": "Suggested articles in {{GENDER:|your}} interests",
 	"growthexperiments-signupcampaign-bullet2": "Ask for help from an experienced editor",
 	"growthexperiments-signupcampaign-bullet3": "Start with small, easy edits",
