GLAM events: add topic match mode widget selector
What:
* Add user preference SuggestedEdits::TOPICS_MATCH_MODE_PREF
to store the user selected match mode for topics
* Add NewcomerTasksUserOptionsLookup::getTopicsMatchMode
to return topics match mode stored value
* Rename NewcomerTaskUserOptionsLookup::getTopicsFilter
to getTopics
* Add a widget selector in the TopicSelectionWidget
to switch between AND/OR topic matching modes
* Update GrowthTasksApi.getPreferences to create a
TopicFilters object if there's a stored user preference
for topics, otherwise continue returning null.
* Update TopicFilterDialog.savePreferences to store
the selected topics IDs list and the selected
topic match mode

Analytics logging changes:
* Bump homepage analytics schema to 1.4.0
* Log 'se-topicmatchmode-impression' in StartEditing.js#initialize()
and on FiltersWidget click events adding "topicsMatchMode" to
action_data
* Log 'se-topicmatchmode-and' or 'se-topicmatchmode-or'
on click events in FiltersWidget.js#constructor() binding the
log call to onMatchModeClick event in topicFiltersDialog.

Bug: T301825
Depends-On: Iff7a142bc693babd2e9b049c213855d3b70431ed
Change-Id: I2fdeeac2576a6b55d59c20250703a631264ed79b

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -229,6 +229,9 @@
 	"growthexperiments-homepage-suggestededits-tasktype-name-link-recommendation": "Add links between articles",
 	"growthexperiments-homepage-suggestededits-tasktype-name-image-recommendation": "Add a suggested image",
 	"growthexperiments-homepage-suggestededits-tasktype-machine-description": "Machine suggestions",
+	"growthexperiments-homepage-suggestededits-topics-match-mode-description": "Choose \"Match ALL\" interests for more specific results",
+	"growthexperiments-homepage-suggestededits-topics-match-mode-all": "Match ALL",
+	"growthexperiments-homepage-suggestededits-topics-match-mode-any": "Match ANY",
 	"growthexperiments-homepage-suggestededits-topic-name-biography": "Biography (all)",
 	"growthexperiments-homepage-suggestededits-topic-name-women": "Biography (women)",
 	"growthexperiments-homepage-suggestededits-topic-name-food-and-drink": "Food and drink",
