Slightly rephrase tag descriptions
Most of these tags say:
'"(Name)" task edit suggest by...".

There were two that didn't have the word "task", so I added it.
It's good for UI consistency in general, and also for convenient
and consistent translations.

Change-Id: I455c2fd13502fd96dfc48f324291d41f8d63f017

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -107,9 +107,9 @@
 	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Newcomer task: links]]",
 	"tag-newcomer_task_links-description": "\"Links\" task edit suggested by the suggested edits module of the newcomer homepage",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Suggested: add links]]",
-	"tag-newcomer_task_add_link-description": "\"Add link\" edit suggested by the suggested edits module of the newcomer homepage",
+	"tag-newcomer_task_add_link-description": "\"Add link\" task edit suggested by the suggested edits module of the newcomer homepage",
 	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|Suggested: add images]]",
-	"tag-newcomer_task_image_suggestion-description": "\"Add images\" edit suggested by the suggested edits module of the newcomer homepage",
+	"tag-newcomer_task_image_suggestion-description": "\"Add images\" task edit suggested by the suggested edits module of the newcomer homepage",
 	"growthexperiments-homepage-help-dialog-title": "Ask the help desk",
 	"growthexperiments-homepage-help-header": "Get help with editing",
 	"growthexperiments-homepage-help-subheader": "Top help pages about editing",
