--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -59,6 +59,7 @@
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-away-for": "You’ll be gone for:",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-away-for-label": "days",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-error-badinteger": "Input in \"{{GENDER:|You'll}} be gone for\" is not an integer. Please try again.",
+	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-error-toohigh": "Input in \"{{GENDER:|You'll}} be gone for\" is too high. The maximum number of days a mentor can be away for is 365 (one year).",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-error-unknown": "Unknown error occurred. Please try again later.",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-changed-to-active": "Your status was changed to \"Active\".",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-changed-to-away": "Your status was changed to \"Away\".",
