--- a/i18n/mentorship/qqq.json
+++ b/i18n/mentorship/qqq.json
@@ -64,6 +64,7 @@
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-away-for": "Label in the \"Pause mentoring\" dialog in mentor dashboard's mentor tools module\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-away-for-label": "Label in the \"Pause mentoring\" dialog in mentor dashboard's mentor tools module\n\n{{doc-growthexperiments-mentor-dashboard}}\n\n{{identical|Day}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-error-badinteger": "Error message in the \"Pause mentoring\" dialog in mentor dashboard's mentor tools module\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-error-toohigh": "Error message in the \"Pause mentoring\" dialog in mentor dashboard's mentor tools module\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-error-unknown": "Error message in the \"Pause mentoring\" dialog in mentor dashboard's mentor tools module\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-changed-to-active": "Success message displayed after changing mentor's status to active\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-changed-to-away": "Success message displayed after changing mentor's status to away\n\n{{doc-growthexperiments-mentor-dashboard}}",
