--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -58,7 +58,7 @@
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-text": "If you cannot mentor for a specific time period (more than 1 week) you can set yourself as away. During that period another mentor will receive questions from your mentees.",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-away-for": "You’ll be gone for:",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-away-for-label": "days",
-	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-error-badinteger": "Input in \"You'll be gone for\" is not an integer. Please try again.",
+	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-error-badinteger": "Input in \"{{GENDER:|You'll}} be gone for\" is not an integer. Please try again.",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-error-unknown": "Unknown error occurred. Please try again later.",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-changed-to-active": "Your status was changed to \"Active\".",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-changed-to-away": "Your status was changed to \"Away\".",
