Newcomer tasks: use dropdown widget instead of button group
* Replace ButtonGroupWidget for DropdownWidget in MatchModeSelector
to meet designs
* Add info icon to show the help text in a popup
* Update help select options copy text
* Remove prior "onMatchModeClick" event emitted from
ButtonGroupWidget menu options. Instead emit
"toggleMatchMode" event on "choose" events from
DropdownWidget and bubble it up to needed components
* Add missing logging call in StartEditingDialog
when the match mode is changed

Bug: T305097
Change-Id: Ie2923c6ec1e6673073c73c7be9f0b4646a48c3ba

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -42,7 +42,6 @@
 	"growthexperiments-homepage-startediting-dialog-intro-response-edit-info-add-change": "<strong>When {{GENDER:|you}} created {{GENDER:|your}} account, {{GENDER:|you}} said {{GENDER:|you}} wanted to add or change information on an existing article.</strong> Here, {{GENDER:|you}} can find suggestions of small edits to get started. If {{GENDER:|you}} would rather go straight to changing a specific article, {{GENDER:|you}} can search for the article and click \"{{int:vector-view-edit}}\".",
 	"growthexperiments-homepage-startediting-dialog-intro-response-new-page": "<strong>When {{GENDER:|you}} created {{GENDER:|your}} account, {{GENDER:|you}} said {{GENDER:|you}} wanted to create a new article.</strong> That's an important but challenging type of editing, so we recommend {{GENDER:|you}} try some small edits to existing articles first. If {{GENDER:|you}} would rather go straight to creating a new article, {{GENDER:|you}} can [$1 learn how here].",
 	"growthexperiments-homepage-startediting-dialog-intro-topic-selector-header": "Choose some topics {{GENDER:|you}} are interested in editing",
-
 	"growthexperiments-homepage-startediting-dialog-intro-topic-description-header": "Filter by topic",
 	"growthexperiments-homepage-startediting-dialog-intro-topic-description-subheader": "Use topics to get suggestions {{GENDER:|you}} find interesting. {{GENDER:|You}} can choose just one topic or select many.",
 	"growthexperiments-homepage-startediting-dialog-difficulty-back": "Back",
@@ -217,7 +216,7 @@
 	"growthexperiments-homepage-suggestededits-difficulty-indicator-label-medium": "Medium",
 	"growthexperiments-homepage-suggestededits-difficulty-indicator-label-hard": "Hard",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-title": "Select types of edits",
-	"growthexperiments-homepage-suggestededits-topic-filters-title": "Select interests",
+	"growthexperiments-homepage-suggestededits-topic-filters-title": "Select topics",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-close": "Done",
 	"growthexperiments-homepage-suggestededits-topic-filters-close": "Done",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-article-count": "<strong>$1</strong> {{PLURAL:$1|article|articles}} found",
@@ -229,9 +228,9 @@
 	"growthexperiments-homepage-suggestededits-tasktype-name-link-recommendation": "Add links between articles",
 	"growthexperiments-homepage-suggestededits-tasktype-name-image-recommendation": "Add a suggested image",
 	"growthexperiments-homepage-suggestededits-tasktype-machine-description": "Machine suggestions",
-	"growthexperiments-homepage-suggestededits-topics-match-mode-all": "Match ALL",
-	"growthexperiments-homepage-suggestededits-topics-match-mode-any": "Match ANY",
-	"growthexperiments-homepage-suggestededits-topics-match-mode-description": "Choose \"Match ALL\" interests for more specific results",
+	"growthexperiments-homepage-suggestededits-topics-match-mode-description": "Choose the option to \"Match all selected topics\" for more specific results",
+	"growthexperiments-homepage-suggestededits-topics-match-mode-all": "Match all selected topics",
+	"growthexperiments-homepage-suggestededits-topics-match-mode-any": "Match at least one selected topic",
 	"growthexperiments-homepage-suggestededits-topic-name-biography": "Biography (all)",
 	"growthexperiments-homepage-suggestededits-topic-name-women": "Biography (women)",
 	"growthexperiments-homepage-suggestededits-topic-name-food-and-drink": "Food and drink",
@@ -294,7 +293,7 @@
 	"growthexperiments-homepage-suggestededits-error-title": "No suggested edits are available at this time.",
 	"growthexperiments-homepage-suggestededits-error-description": "Please try again later.",
 	"growthexperiments-homepage-suggestededits-difficulty-filter-error": "Select at least one type of edit",
-	"growthexperiments-homepage-suggestededits-topic-filter-select-interests": "Select interests",
+	"growthexperiments-homepage-suggestededits-topic-filter-select-interests": "Select topics",
 	"growthexperiments-homepage-suggestededits-topics-more": "show more",
 	"growthexperiments-homepage-suggestededits-topics-button-topic-count": "$1 {{PLURAL:$1|topic|topics}}",
 	"growthexperiments-homepage-suggestededits-topics-selectall": "Select all",
