Vue migration: create mentee overview table with Vue
* add overview components in ext.growthExperiments.MentorDashboard.Vue
module.
* add vue, vuex, codex and mediawiki dependencies in extension.json
* create mentees store for handling the mentee collection (shown in
the table). It includes mentees and filters state. Consider separating
the filters state. Contains logic for saving mentee overview presets.
* create mentees-search store for the MenteeSearch look up results list.
* create user-preferences store for saving user options through mw.Api
* add coverage command to integrate with SonarQube

Bug: T300532
Change-Id: Ifc90bc93dd1d2c1744cc10e0b83b4d55fc7d8f29

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -39,6 +39,7 @@
 	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-no-mentees-headline": "Mentee data unavailable",
 	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-no-mentees-text": "You may not have any mentees assigned yet. Data is updated every three hours.",
 	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-filters-headline": "No mentees found",
+	"growthexperiments-mentor-dashboard-mentee-overview-table-caption": "{{GENDER:|Your}} mentees ( data updated every 3 hours )",
 	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-filters-text": "Change your filters to find mentees.",
 	"growthexperiments-mentor-dashboard-resources-headline": "Resources",
 	"growthexperiments-mentor-dashboard-resources-link-mentors-list": "The mentor list",
