Backport video landing page changes
Contains three commits:

    Video landing page: Update copy and layout

    ...per Slack request.

    Bug: T303785
    Change-Id: I3d4801f0495d4c5178186b50866108ab4c538be3
    (cherry picked from commit 3f4d62f4ea949f649784f7b751525a657e055a83)

    Add a legal notice to campaign landing pages

    Bug: T303785
    Change-Id: Iba63169f4abeb57eb7c2f8b43bbda9b07ab250d3
    (cherry picked from commit b579bbefdff59dd2d82555e644dba2459e8fa328)

    Account creation: update campaign value in isMarketingVideoCampaign

    Bug: T303785
    Change-Id: I09072b8dcd093f1e43603a180b1813649cf6e196
    (cherry picked from commit d6bba349abece9f3e0d2ac1cccbb9b3434db7422)

Bug: T303785
Change-Id: Idf35f67fb298914dad7c80a2ad135909fd344860

--- a/i18n/confirmemail/es.json
+++ b/i18n/confirmemail/es.json
@@ -21,9 +21,10 @@
 	"growthexperiments-confirmemail-confirm-body-plaintext": "{{GENDER:$2|Hola}} $2,\n\nGracias por añadir un correo electrónico a tu cuenta de {{SITENAME}}, registrada desde la dirección IP $1.\n\nPor favor, haz clic en el botón de abajo para confirmar esta dirección de correo electrónico que te gustaría vincular a tu cuenta \"$2\":\n\n$3\n\nNota: este código de confirmación <strong>expira el $4</strong>.\n\nGracias,\n\n{{SITENAME}}\n\n----\n\nPara cancelar la confirmación de la dirección de correo electrónico (porque no registraste la cuenta o por cualquier otro motivo), haz clic en este enlace de cancelación:\n\n$5",
 	"growthexperiments-signupcampaign-title": "Gracias por ser donante. Crea una cuenta para empezar a mejorar Wikipedia.",
 	"growthexperiments-signupcampaign-body": "Wikipedia está construida por personas como tú que trabajan juntas. Editar un artículo puede ser tan simple como agregar un enlace o cambiar una palabra.",
-	"growthexperiments-marketingvideocampaign-title": "Personas como tú son las que construyen Wikipedia.",
+	"growthexperiments-marketingvideocampaign-title": "Personas como tú son las que construyen Wikipedia",
 	"growthexperiments-marketingvideocampaign-body": "280.000 editores se presentan cada mes como voluntarios — ¿Te unes a ellos?\n\nSabemos que hacer tu primera edición suele ser intimidante, pero puede resultar bastante fácil. Solo tienes que preguntar a nuestros dedicados editores, a los que puedes escuchar en este vídeo:",
 	"growthexperiments-signupcampaign-bullet1": "Artículos sugeridos según {{GENDER:|tus}} intereses",
 	"growthexperiments-signupcampaign-bullet2": "Obtén ayuda y orientación mientras editas",
-	"growthexperiments-signupcampaign-bullet3": "Empieza con ediciones pequeñas y sencillas"
+	"growthexperiments-signupcampaign-bullet3": "Empieza con ediciones pequeñas y sencillas",
+	"growthexperiments-campaigns-footer": "Al crear tu cuenta en esta página, será asociada a esta campaña con fines relacionados con la experiencia y el análisis."
 }
