--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -330,6 +330,8 @@
 	"growthexperiments-notification-learn-more": "Learn more about {{GENDER:$1|your}} new {{GENDER:$2|mentor}}",
 	"right-setmentor": "Set user's mentor",
 	"action-setmentor": "set user's mentor",
+	"right-managementors": "Manage the list of mentors",
+	"action-managementors": "Manage the list of mentors",
 	"growthexperiments-homepage-suggestededits-mobile-peek-more-about-this-edit": "More about this suggested edit",
 	"growthexperiments-homepage-suggestededits-more-info": "More information about suggested edits",
 	"growthexperiments-homepage-welcome-notice-header": "Welcome to {{GENDER:$1|your}} homepage!",
