--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -497,6 +497,7 @@
 	"growthexperiments-homepage-mentorship-confirm-dialog-text": "Continue to get an experienced editor as {{GENDER:|your}} editing mentor.",
 	"growthexperiments-homepage-mentorship-confirm-dialog-cancel": "Cancel",
 	"growthexperiments-homepage-mentorship-confirm-dialog-continue": "Continue",
+	"growthexperiments-homepage-mentorship-ellipsis-menu-about": "About mentors",
 	"growthexperiments-homepage-mentorship-ellipsis-menu-optout": "Opt out of mentorship",
 	"growthexperiments-homepage-mentorship-optout-header": "Opt out of mentoring?",
 	"growthexperiments-homepage-mentorship-optout-text": "You can always opt back into mentorship again. However, you may not receive the same mentor as before.",
@@ -507,5 +508,12 @@
 	"growthexperiments-homepage-mentorship-optout-confirmation-reason-different-mentor": "I want a different mentor",
 	"growthexperiments-homepage-mentorship-optout-confirmation-reason-no-mentor": "I don’t want a mentor at all ",
 	"growthexperiments-homepage-mentorship-optout-confirmation-reason-other": "Other / I’d prefer not to say",
-	"growthexperiments-homepage-mentorship-optout-confirmation-done": "Done"
+	"growthexperiments-homepage-mentorship-optout-confirmation-done": "Done",
+	"growthexperiments-homepage-mentorship-about-header": "About mentors",
+	"growthexperiments-homepage-mentorship-about-subheader-mentor": "Who is {{GENDER:|your}} mentor?",
+	"growthexperiments-homepage-mentorship-about-mentor-par1": "{{GENDER:|Your}} mentor is another person with a lot of experience editing on {{SITENAME}}. They’ve volunteered to guide newer people like you on how to edit, and can answer questions {{GENDER:|you}} may have about using the site.",
+	"growthexperiments-homepage-mentorship-about-mentor-par2": "When {{GENDER:|you}} send a message to your mentor, they will see it on their user talk page and {{GENDER:|you}} should receive a notification when they reply.",
+	"growthexperiments-homepage-mentorship-about-subheader-optout": "Opt out of mentorship",
+	"growthexperiments-homepage-mentorship-about-optout-par1": "Select the button below to opt out if {{GENDER:|you}} prefer not to have a specific mentor assigned to {{GENDER:|you}} right now. {{GENDER:|You}} can get a new mentor again at any time if {{GENDER:|you}} change {{GENDER:|your}} mind.",
+	"growthexperiments-homepage-mentorship-about-done": "Done"
 }
