--- a/i18n/homepage/qqq.json
+++ b/i18n/homepage/qqq.json
@@ -517,6 +517,7 @@
 	"growthexperiments-homepage-mentorship-confirm-dialog-text": "Text of a confirmation dialog shown when user is opting back into mentorship.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-confirm-dialog-cancel": "Label of a button in the confirmation dialog shown when user is opting back into mentorship.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-confirm-dialog-continue": "Label of a button in the confirmation dialog shown when user is opting back into mentorship.\n\n{{doc-growthexperiments-homepage}}\n\n{{identical|Continue}}",
+	"growthexperiments-homepage-mentorship-ellipsis-menu-about": "Item in mentorship module's ellipsis menu\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-ellipsis-menu-optout": "Item in mentorship module's ellipsis menu\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-optout-header": "Header of a confirmation dialog shown when an user is opting out from mentorship.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-optout-text": "Text of a confirmation shown when user opts out from mentorship.\n\n{{doc-growthexperiments-homepage}}",
@@ -527,5 +528,12 @@
 	"growthexperiments-homepage-mentorship-optout-confirmation-reason-different-mentor": "Possible reason to opt-out. Shown in a feedback dialog shown when an user is opting out from mentorship.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-optout-confirmation-reason-no-mentor": "Possible reason to opt-out. Shown in a feedback dialog shown when an user is opting out from mentorship.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-optout-confirmation-reason-other": "Possible reason to opt-out. Shown in a feedback dialog shown when an user is opting out from mentorship.\n\n{{doc-growthexperiments-homepage}}",
-	"growthexperiments-homepage-mentorship-optout-confirmation-done": "Possible reason to opt-out. Shown in a feedback dialog shown when an user is opting out from mentorship.\n\n{{doc-growthexperiments-homepage}}\n\n{{Identical|Done}}"
+	"growthexperiments-homepage-mentorship-optout-confirmation-done": "Possible reason to opt-out. Shown in a feedback dialog shown when an user is opting out from mentorship.\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-homepage-mentorship-about-header": "Header of the \"About mentorship\" dialog\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-homepage-mentorship-about-subheader-mentor": "Subheader of the \"About mentorship\" dialog\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-homepage-mentorship-about-mentor-par1": "Text displayed in the \"About mentorship\" dialog\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-homepage-mentorship-about-mentor-par2": "Text displayed in the \"About mentorship\" dialog\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-homepage-mentorship-about-subheader-optout": "Subheader of the \"About mentorship\" dialog\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-homepage-mentorship-about-optout-par1": "Text displayed in the \"About mentorship\" dialog\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-homepage-mentorship-about-done": "Done button displayed in the \"About mentorship\" dialog\n\n{{doc-growthexperiments-homepage}}"
 }
