Add a legal notice to campaign landing pages
Bug: T303785
Change-Id: Iba63169f4abeb57eb7c2f8b43bbda9b07ab250d3

--- a/i18n/confirmemail/es.json
+++ b/i18n/confirmemail/es.json
@@ -26,5 +26,6 @@
 	"growthexperiments-marketingvideocampaign-body": "280.000 editores se presentan cada mes como voluntarios — ¿Te unes a ellos?\n\nSabemos que hacer tu primera edición suele ser intimidante, pero puede resultar bastante fácil. Solo tienes que preguntar a nuestros dedicados editores, a los que puedes escuchar en este vídeo:",
 	"growthexperiments-signupcampaign-bullet1": "Artículos sugeridos según {{GENDER:|tus}} intereses",
 	"growthexperiments-signupcampaign-bullet2": "Obtén ayuda y orientación mientras editas",
-	"growthexperiments-signupcampaign-bullet3": "Empieza con ediciones pequeñas y sencillas"
+	"growthexperiments-signupcampaign-bullet3": "Empieza con ediciones pequeñas y sencillas",
+	"growthexperiments-campaigns-footer": "Al crear tu cuenta en esta página, será asociada a esta campaña con fines relacionados con la experiencia y el análisis."
 }
