--- a/i18n/confirmemail/en.json
+++ b/i18n/confirmemail/en.json
@@ -14,7 +14,7 @@
 	"growthexperiments-confirmemail-confirm-body-plaintext": "{{GENDER:$2|Hi}} $2,\n\nThanks for adding an email to your {{SITENAME}} account, registered from IP address $1.\n\nPlease click on the link below to confirm this as the email address you'd like to link to your account \"$2\":\n\n$3\n\nNote: this confirmation code expires at $4.\n\nThanks,\n\n{{SITENAME}}\n\n----\n\nTo cancel the email address confirmation (because you did not register the account or for any other reason), click on this cancellation link:\n\n$5",
 	"growthexperiments-signupcampaign-title": "Thanks for donating! Now join the community of editors making Wikipedia better today",
 	"growthexperiments-signupcampaign-body": "Editing Wikipedia can be as simple as adding a link or changing a word. Get suggestions for articles in {{GENDER:|your}} topics of interest after you create your account!",
-	"growthexperiments-marketingvideocampaign-title": "Wikipedia is built by people like you",
+	"growthexperiments-marketingvideocampaign-title": "Wikipedia is built by people like you.",
 	"growthexperiments-marketingvideocampaign-body": "280,000 editors volunteer every month - will you join them?\n\nWe know that making your first edit is often intimidating, but it can be pretty easy. Just ask our dedicated editors, who you can hear from in this video:",
 	"growthexperiments-signupcampaign-bullet1": "Suggested articles in {{GENDER:|your}} interests",
 	"growthexperiments-signupcampaign-bullet2": "Ask for help from an experienced editor",
@@ -24,6 +24,6 @@
 	"growthexperiments-josacampaign-title": "Welcome to Wikipedia's Birthday Celebration!\n\nOnce you have created your account you can start contributing to the encyclopedia.",
 	"growthexperiments-josacampaign-body": "This is an event organized by the Jordanian Open Source Association and Wikimedia in the Levant to help you learn about Wikipedia and how to contribute to it.\n\nTo start contributing, all you have to do is fill out this form and then choose a task to work on.\n\nIf you need any help, please ask the event organizers.",
 	"growthexperiments-glamcampaign-title": "¡Te damos la bienvenida al evento #1Picture1Article!\n\nPodrás comenzar a sumar conocimientos en la enciclopedia una vez que hayas creado tu cuenta de usuario.",
-	"growthexperiments-glamcampaign-body": "Este es un evento organizado por Wikimedia Argentina, Wikimedia Chile, Wikimedia México y la Fundación Wikimedia para ayudarte a aprender sobre Wikipedia y cómo colocar imágenes en diferentes artículos empleando la función \"Añadir una imagen\" (Add an image, en inglés)\n\nPara comenzar a utilizar esta herramienta, todo lo que debes hacer es completar este formulario y luego elegir un tema de interés.\n\nSi necesitas ayuda, consulta a los organizadores y organizadoras del evento.",
-	"growthexperiments-campaigns-footer": "By creating your account on this page, it will be associated with this campaign for experience and analysis purposes."
+	"growthexperiments-glamcampaign-body": "Este es un evento organizado por Wikimedia Argentina, Wikimedia Chile, Wikimedia México y la Fundación Wikimedia para ayudarte a aprender sobre Wikipedia y cómo colocar imágenes en diferentes artículos empleando la función \"Añadir una imagen\" (Add an image, en inglés)\n\nPara comenzar a utilizar esta herramienta, todo lo que debes hacer es completar este formulario y luego elegir un tema de interés.\n\nSi necesitas ayuda, consulta a los organizadores y organizadoras del evento."
+
 }
