Post-edit dialog: show the full task feed
Bug: T302335
Change-Id: Ib44f87cbd523ea1b8d011bfa82bcd9a1d95af723

--- a/i18n/help/en.json
+++ b/i18n/help/en.json
@@ -26,7 +26,7 @@
 	"growthexperiments-help-panel-postedit-subheader2-link-recommendation": "Try another type of edit or come back tomorrow for more link suggestions.",
 	"growthexperiments-help-panel-postedit-subheader": "Edit another suggestion:",
 	"growthexperiments-help-panel-postedit-subheader-notsaved": "Next suggestion:",
-	"growthexperiments-help-panel-postedit-footer": "View more suggested edits",
+	"growthexperiments-help-panel-postedit-footer": "View all suggested edits",
 	"growthexperiments-help-panel-postedit-suggestededits-info": "Other users of {{SITENAME}} have found articles that need work. Continue {{GENDER:|your}} editing by browsing these suggested edits.",
 	"growthexperiments-help-panel-questionreview-title": "Ask the help desk",
 	"growthexperiments-help-panel-questionreview-title-mentor": "Ask your mentor",
