Video landing page: Show different title/body text on mobile
Reverts/replaces I3686db22a59ebb40e3b00cde77b001bb4b1e6d68.

Also make some small updates to the desktop text, and change the
title heading level for better accessibility.

Cherry-picked from commits 6a13c52aaac42a4c93767136ce4a3da713da096b
and db320421b45f4fa8616d5ec0632f46d0afe3b34f.

Bug: T303785
Change-Id: I2db72c4dbafab0550f96367c852448c7bdd324c9

--- a/i18n/confirmemail/en.json
+++ b/i18n/confirmemail/en.json
@@ -15,7 +15,8 @@
 	"growthexperiments-signupcampaign-title": "Thanks for donating! Now join the community of editors making Wikipedia better today",
 	"growthexperiments-signupcampaign-body": "Editing Wikipedia can be as simple as adding a link or changing a word. Get suggestions for articles in {{GENDER:|your}} topics of interest after you create your account!",
 	"growthexperiments-marketingvideocampaign-title": "Wikipedia is built by people like you",
-	"growthexperiments-marketingvideocampaign-body": "280,000 editors volunteer every month - will you join them?\n\nWe know that making your first edit is often intimidating, but it can be pretty easy. Just ask our dedicated editors, who you can hear from in this video:",
+	"growthexperiments-marketingvideocampaign-body": "280,000 editors volunteer every month - will you join them?\n\nWe know that making your first edit is often intimidating, but it's actually quite easy. Just ask our dedicated editors, who tell you about it in this video:",
+	"growthexperiments-marketingvideocampaign-body-mobile": "Thousands of people like you are the ones building Wikipedia. Will you join them?\n\nThis is a message from our editors to you:",
 	"growthexperiments-signupcampaign-bullet1": "Suggested articles in {{GENDER:|your}} interests",
 	"growthexperiments-signupcampaign-bullet2": "Ask for help from an experienced editor",
 	"growthexperiments-signupcampaign-bullet3": "Start with small, easy edits",
