--- a/i18n/confirmemail/en.json
+++ b/i18n/confirmemail/en.json
@@ -15,6 +15,7 @@
 	"growthexperiments-signupcampaign-title": "Thanks for donating! Now join the community of editors making Wikipedia better today",
 	"growthexperiments-signupcampaign-body": "Editing Wikipedia can be as simple as adding a link or changing a word. Get suggestions for articles in {{GENDER:|your}} topics of interest after you create your account!",
 	"growthexperiments-marketingvideocampaign-title": "Wikipedia is built by people like you",
+	"growthexperiments-marketingvideocampaign-title-mobile": "-",
 	"growthexperiments-marketingvideocampaign-body": "280,000 editors volunteer every month - will you join them?\n\nWe know that making your first edit is often intimidating, but it's actually quite easy. Just ask our dedicated editors, who tell you about it in this video:",
 	"growthexperiments-marketingvideocampaign-body-mobile": "Thousands of people like you are the ones building Wikipedia. Will you join them?\n\nThis is a message from our editors to you:",
 	"growthexperiments-signupcampaign-bullet1": "Suggested articles in {{GENDER:|your}} interests",
